--- a/Projects/WEEK 3 PROJECT - WEB SCRAPING.ipynb
+++ b/Projects/WEEK 3 PROJECT - WEB SCRAPING.ipynb
@@ -2,25 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrap(url1,url2):\n",
     "    \n",
     "    import os\n",
     "    import pandas as pd\n",
     "    from bs4 import BeautifulSoup\n",
     "    import requests as r\n",
     "    import numpy as np\n",
-    "    import time\n",
+    "    import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrap(url1,url2):\n",
+    "\n",
     "\n",
     "    resp_indeed = r.get(url1)\n",
     "    resp_pe = r.get(url2)\n",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -303,43 +305,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Ingénieur data analyst</td>\n",
-       "      <td>Segula Technologies</td>\n",
-       "      <td>La Rochelle (17)</td>\n",
+       "      <td>Analyste fonctionnel</td>\n",
+       "      <td>Siege Asp Limoges</td>\n",
+       "      <td>Limoges (87)</td>\n",
        "      <td>0</td>\n",
-       "      <td>[3,0]</td>\n",
+       "      <td>Not specified</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Ingénieur data analyst</td>\n",
-       "      <td>Segula Technologies</td>\n",
-       "      <td>La Rochelle (17)</td>\n",
+       "      <td>Analyste business intelligence</td>\n",
+       "      <td>Daytona</td>\n",
+       "      <td>Boulogne-Billancourt (92)</td>\n",
        "      <td>0</td>\n",
-       "      <td>[3,0]</td>\n",
+       "      <td>[3,8]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Ingénieur data analyst</td>\n",
-       "      <td>Segula Technologies</td>\n",
-       "      <td>La Rochelle (17)</td>\n",
+       "      <td>Analyste développeur mdm informatica (h/f) / f...</td>\n",
+       "      <td>Espace Freelance</td>\n",
+       "      <td>Villeneuve-d'Ascq (59)</td>\n",
        "      <td>0</td>\n",
-       "      <td>[3,0]</td>\n",
+       "      <td>Not specified</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Analyste de veille marchés publics (appels d'o...</td>\n",
-       "      <td>Octopusmind</td>\n",
-       "      <td>Nantes (44)</td>\n",
+       "      <td>Consultant data &amp; bi microsoft (power bi / azure</td>\n",
+       "      <td>Exakis Nelite</td>\n",
+       "      <td>Paris (75)</td>\n",
        "      <td>0</td>\n",
        "      <td>Not specified</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Ingénieur data analyst</td>\n",
-       "      <td>Segula Technologies</td>\n",
-       "      <td>La Rochelle (17)</td>\n",
+       "      <td>Analyste cybersécurité (h/f) / freelance</td>\n",
+       "      <td>Scc</td>\n",
+       "      <td>Paris (75)</td>\n",
        "      <td>0</td>\n",
-       "      <td>[3,0]</td>\n",
+       "      <td>[3,3]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -350,23 +352,23 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1270</th>\n",
-       "      <td>Data manager / data analyst</td>\n",
-       "      <td>Digitick</td>\n",
-       "      <td>Marseille (13)</td>\n",
+       "      <th>1268</th>\n",
+       "      <td>Data analyst</td>\n",
+       "      <td>Groupement Les Mousquetaires</td>\n",
+       "      <td>Issy-les-Moulineaux (92)</td>\n",
+       "      <td>30</td>\n",
+       "      <td>[2,9]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1269</th>\n",
+       "      <td>Stage analyste crédit, courbevoie</td>\n",
+       "      <td>Hsbc</td>\n",
+       "      <td>Courbevoie (92)</td>\n",
        "      <td>30</td>\n",
        "      <td>[4,0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1271</th>\n",
-       "      <td>Data analyst</td>\n",
-       "      <td>Ogilvy</td>\n",
-       "      <td>Paris (75)</td>\n",
-       "      <td>30</td>\n",
-       "      <td>[4,1]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1272</th>\n",
+       "      <th>1270</th>\n",
        "      <td>Data analyst - business intelligence junior</td>\n",
        "      <td>Bca Expertise</td>\n",
        "      <td>Asnières-sur-Seine (92)</td>\n",
@@ -374,54 +376,67 @@
        "      <td>[3,1]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1273</th>\n",
-       "      <td>Data analyst connaissance clients</td>\n",
-       "      <td>Le Groupe La Poste</td>\n",
-       "      <td>Issy-les-Moulineaux (92)</td>\n",
+       "      <th>1271</th>\n",
+       "      <td>Analyste financier / business analyst</td>\n",
+       "      <td>Enr'Cert</td>\n",
+       "      <td>Paris 8e (75)</td>\n",
        "      <td>30</td>\n",
-       "      <td>[3,8]</td>\n",
+       "      <td>Not specified</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1274</th>\n",
-       "      <td>Analyste quantitatif surveillance des marchés ...</td>\n",
-       "      <td>Amf</td>\n",
+       "      <th>1272</th>\n",
+       "      <td>Technical business analyst (junior</td>\n",
+       "      <td>Jicap-Performance</td>\n",
        "      <td>Paris (75)</td>\n",
        "      <td>30</td>\n",
-       "      <td>[3,3]</td>\n",
+       "      <td>Not specified</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1275 rows × 5 columns</p>\n",
+       "<p>1273 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    Job              Company  \\\n",
-       "0                                Ingénieur data analyst  Segula Technologies   \n",
-       "1                                Ingénieur data analyst  Segula Technologies   \n",
-       "2                                Ingénieur data analyst  Segula Technologies   \n",
-       "3     Analyste de veille marchés publics (appels d'o...          Octopusmind   \n",
-       "4                                Ingénieur data analyst  Segula Technologies   \n",
-       "...                                                 ...                  ...   \n",
-       "1270                        Data manager / data analyst             Digitick   \n",
-       "1271                                       Data analyst               Ogilvy   \n",
-       "1272        Data analyst - business intelligence junior        Bca Expertise   \n",
-       "1273                  Data analyst connaissance clients   Le Groupe La Poste   \n",
-       "1274  Analyste quantitatif surveillance des marchés ...                  Amf   \n",
+       "                                                    Job  \\\n",
+       "0                                  Analyste fonctionnel   \n",
+       "1                        Analyste business intelligence   \n",
+       "2     Analyste développeur mdm informatica (h/f) / f...   \n",
+       "3      Consultant data & bi microsoft (power bi / azure   \n",
+       "4              Analyste cybersécurité (h/f) / freelance   \n",
+       "...                                                 ...   \n",
+       "1268                                       Data analyst   \n",
+       "1269                  Stage analyste crédit, courbevoie   \n",
+       "1270        Data analyst - business intelligence junior   \n",
+       "1271              Analyste financier / business analyst   \n",
+       "1272                 Technical business analyst (junior   \n",
        "\n",
-       "                      Location  Publication date Company's rate  \n",
-       "0             La Rochelle (17)                 0          [3,0]  \n",
-       "1             La Rochelle (17)                 0          [3,0]  \n",
-       "2             La Rochelle (17)                 0          [3,0]  \n",
-       "3                  Nantes (44)                 0  Not specified  \n",
-       "4             La Rochelle (17)                 0          [3,0]  \n",
-       "...                        ...               ...            ...  \n",
-       "1270            Marseille (13)                30          [4,0]  \n",
-       "1271                Paris (75)                30          [4,1]  \n",
-       "1272   Asnières-sur-Seine (92)                30          [3,1]  \n",
-       "1273  Issy-les-Moulineaux (92)                30          [3,8]  \n",
-       "1274                Paris (75)                30          [3,3]  \n",
+       "                           Company                   Location  \\\n",
+       "0                Siege Asp Limoges               Limoges (87)   \n",
+       "1                          Daytona  Boulogne-Billancourt (92)   \n",
+       "2                 Espace Freelance     Villeneuve-d'Ascq (59)   \n",
+       "3                    Exakis Nelite                 Paris (75)   \n",
+       "4                              Scc                 Paris (75)   \n",
+       "...                            ...                        ...   \n",
+       "1268  Groupement Les Mousquetaires   Issy-les-Moulineaux (92)   \n",
+       "1269                          Hsbc            Courbevoie (92)   \n",
+       "1270                 Bca Expertise    Asnières-sur-Seine (92)   \n",
+       "1271                      Enr'Cert              Paris 8e (75)   \n",
+       "1272             Jicap-Performance                 Paris (75)   \n",
        "\n",
-       "[1275 rows x 5 columns]"
+       "      Publication date Company's rate  \n",
+       "0                    0  Not specified  \n",
+       "1                    0          [3,8]  \n",
+       "2                    0  Not specified  \n",
+       "3                    0  Not specified  \n",
+       "4                    0          [3,3]  \n",
+       "...                ...            ...  \n",
+       "1268                30          [2,9]  \n",
+       "1269                30          [4,0]  \n",
+       "1270                30          [3,1]  \n",
+       "1271                30  Not specified  \n",
+       "1272                30  Not specified  \n",
+       "\n",
+       "[1273 rows x 5 columns]"
       ]
      },
      "metadata": {},
