--- a/Labs/module_2/Confidence-Intervals/your-code/main.ipynb
+++ b/Labs/module_2/Confidence-Intervals/your-code/main.ipynb
@@ -9,11 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries"
+    "# Libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.optimize import linprog\n",
+    "from scipy.stats import norm,t"
    ]
   },
   {
@@ -32,11 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172.14308590115726, 174.79024743217607)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "heights = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
+    "\n",
+    "sample_mean = np.mean(heights)\n",
+    "population_std = 4\n",
+    "std_error = population_std/(len(heights)**0.5)\n",
+    "\n",
+    "conf_int = norm.interval(0.80, loc=sample_mean, scale=std_error)\n",
+    "conf_int\n"
    ]
   },
   {
@@ -51,11 +76,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19102040816326524"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "mean_sample = 27/105\n",
+    "\n",
+    "df = np.append(np.ones(27), np.zeros(78))\n",
+    "df.mean()==mean_sample\n",
+    "df.var()\n",
+    "\n"
    ]
   },
   {
@@ -70,11 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-5938c997cb6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchi2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stats' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "stats.chi2.interval"
    ]
   },
   {
@@ -93,11 +150,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([9.77885987, 9.78005617, 9.78061576, 9.77885987, 9.77947145,\n",
+       "        9.78005617, 9.77821956]),\n",
+       " array([10.22114013, 10.21994383, 10.21938424, 10.22114013, 10.22052855,\n",
+       "        10.21994383, 10.22178044]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "acid = [9.8, 10.2, 10.4, 9.8, 10.0, 10.2, 9.6]\n",
+    "\n",
+    "mean_sample = np.mean(acid)\n",
+    "sample_std = np.std(acid)\n",
+    "sample_error = sample_std / (len(acid))**0.5\n",
+    "\n",
+    "result = t.interval(0.95, df=acid, loc = mean_sample, scale = sample_error)\n",
+    "result"
    ]
   },
   {
@@ -187,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
