end of module_2

--- a/Labs/module_2/Plotting-Multiple-Data-Series/your-code/main.ipynb
+++ b/Labs/module_2/Plotting-Multiple-Data-Series/your-code/main.ipynb
@@ -19,9 +19,25 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
+    "import numpy as np\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "sns.set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('../data/liquor_store_sales.csv')\n",
+    "data.head()"
    ]
   },
   {
@@ -29,10 +45,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = pd.read_csv('../data/liquor_store_sales.csv')\n",
-    "data.head()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -46,7 +66,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "features = ['RetailSales', 'RetailTransfers', 'WarehouseSales']\n",
+    "\n",
+    "sns.barplot(x=data['RetailSales'], y=data.ItemType, data=data, palette=\"Blues_d\")\n",
+    "plt.show()\n",
+    "sns.barplot(x=data['RetailTransfers'], y=data.ItemType, data=data, palette=\"Blues_d\")\n",
+    "plt.show()\n",
+    "sns.barplot(x=data['WarehouseSales'], y=data.ItemType, data=data, palette=\"Blues_d\")\n",
+    "plt.show()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,7 +90,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['TotalSales']=data['RetailSales']+data['WarehouseSales']\n",
+    "df=data.groupby(by=['TotalSales', 'Supplier'])\n",
+    "\n",
+    "df.hist()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,9 +107,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.kdeplot(x='RetailSales', y='RetailSales', data=data['RetailSales'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
